# CellDISECT

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  Jan11_scIB_benchmark.ipynb  Jan15_scIB_benchmark_kang2018.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  training_example.py
celldisect/: _model.py  _module.py  data.py  trainingplan.py  utils.py
diffair/: trainingplan.py
dis2p/: __init__.py  dis2pmPoissonvae2.py  dis2pvae.py  dis2pvae_cE.py  dis2pvi_cE.py  trainingplan.py  tuner_base.py
dis2pm_dev/: Feb7_neurips_debug_dis2pmPoisson.ipynb  Feb9_neurips_debug_dis2p.ipynb  Oct13_mini_tutorial.ipynb  Oct17_mini_tutorial_debug_dis2pm.ipynb  dis2pm_dev.ipynb  multiVI_tutorial.ipynb  requirements.txt
dis2pm_dev/dis2p/: dis2pvae.py  trainingplan.py
dis2pm_dev/dis2pm/: dis2pmPoissonvae.py  dis2pmPoissonvi.py  dis2pmvae.py  dis2pmvi.py  ood_m.py  trainingplan_m.py  utils_m.py
dis2pm_dev/scfair_reproducibility/: defunct_Oct03_OOD_heart.ipynb  setup.py
dis2pm_dev/scfair_reproducibility/data/output/: acc_adv_cl.csv  fairness_metrics.csv
dis2pm_dev/scfair_reproducibility/notebooks/: Aug25_stathis_disentanglement_benchmark.ipynb  tutorial.ipynb
dis2pm_dev/scfair_reproducibility/scripts/: train_and_metrics.py  train_heart.py  train_heart_dis2p.py
dis2pm_dev/scfair_reproducibility1/: README.md
dis2pm_dev/scfair_reproducibility1/data/output/: acc_cl.csv
dis2pm_dev/scfair_reproducibility1/evaluation/: metrics.py
dis2pm_dev/scfair_reproducibility1/notebooks/: Aug21_disentanglement_benchmark.ipynb
dis2pm_dev/scfair_reproducibility1/scripts/: bash_for_many_jobs.sh  bsub_fairvi.sh  hyperparameter_grid.py
docs/: requirements.txt
docs/source/: 404.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  latexmkrc  references.bib  references.rst  robots.txt
docs/source/_static/css/: custom.css
docs/source/_static/images/: create_favicon.py
docs/source/_templates/: class.rst  layout.html  versioning.html
docs/source/api/: celldisect.rst  data.rst  index.rst  model.rst  modules.rst  utils.rst
docs/source/tutorials/: Eraslan_CF_Tutorial.ipynb  Erythroid_subset_inference.ipynb  index.rst
examples/: inference_example.py  training_example.py
module/: lfvae.py
reproducibility/: metrics(1).ipynb
scfair/: diffairvae.py  diffairvi.py  evaluate.py  fairvae.py  fairvi.py  fairvi_dataloader.py  fairvi_dataset.py  fairvi_datasplitter.py  metrics.py  trainingplan.py  utils.py
scfair/model/: fairvi.py  farconvi.py  lfvi.py
scfair/module/: fairvae.py  farconvae.py
scfair/nn/: _base_components_utils.py  _utils.py
scfair/train/: trainingplan.py
