[tool.poetry]
name = "dis2p"
version = "0.0.1"
description = "To be added."
authors = ["First Last <name@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dis2p"},
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
llvmlite = "^0.41"
anndata = ">=0.9.0, <0.10.0"
scvi-tools = ">=0.20.3,<1.0.0"
importlib-metadata = "*"
scanpy = "*"
torch = { version = ">1.8.0,<=2.0.1" }
adjustText = "*"
numpy = '>=1.22.4,<1.24'
seaborn = "*"
gdown = "*"
jax = ">=0.4.16, <0.4.24"
jaxlib = ">=0.4.16, <0.4.24"
torchaudio = ">2.0.0,<=2.0.1"
lightning = ">=2.2.0, <2.3.0"
scib-metrics = ">=0.5.1, <0.6.0"
scib = ">=1.1.5, <1.2.0"
ipykernel = "*"
ray = { version = ">=2.9.0, <2.10.0", extras = ["data", "train", "tune", "serve"] }
scipy = ">=1.12.0, <1.13.0"

# Optional dependencies
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
jupyter = "*"
nbformat = "*"
nbconvert = "*"
sphinx = "*"
scanpydoc = "*"
nbsphinx = "*"
nbsphinx-link = "*"
ipython = "*"
toml = "*"
pydata-sphinx-theme = "*"
typing_extensions = "*"
sphinx-autodoc-typehints = "*"
sphinx_gallery = "*"
sphinx-rtd-theme = "*"


[tool.poetry.extras]
docs = ["scanpy", "sphinx", "scanpydoc", "nbsphinx", "nbsphinx-link", "ipython", "toml", "pydata-sphinx-theme", "typing_extensions", "sphinx-autodoc-typehints", "sphinx_gallery", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
