[tool.poetry]
name = "celldisect"
version = "0.0.11"
description = "To be added."
authors = ["First Last <name@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "celldisect"},
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
llvmlite = "^0.42"
anndata = ">=0.10.8, <0.10.9"
scvi-tools = ">=0.20.3,<1.0.0"
importlib-metadata = "*"
scanpy = "*"
torch = { version = ">=2.1.0, <2.3.0"}
adjustText = "*"
numpy = '>=1.26.3, <1.27.0'
seaborn = "*"
gdown = "*"
jax = ">=0.4.16, <0.4.24"
jaxlib = ">=0.4.16, <0.4.24"
lightning = ">=2.2.0, <2.3.0"
scib-metrics = ">=0.5.1, <0.6.0"
scib = ">=1.1.5, <1.2.0"
ipykernel = "*"
ray = { version = ">=2.9.0, <2.10.0", extras = ["data", "train", "tune", "serve"] }
scipy = ">=1.12.0, <1.13.0"
typing_extensions = ">=4.5, <4.6"

# Optional dependencies
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
jupyter = "*"
nbformat = "*"
nbconvert = "*"
sphinx = "*"
scanpydoc = "*"
nbsphinx = "*"
nbsphinx-link = "*"
ipython = "*"
toml = "*"
pydata-sphinx-theme = "*"
sphinx-autodoc-typehints = "*"
sphinx_gallery = "*"
sphinx-rtd-theme = "*"
wandb = "*"


[tool.poetry.extras]
docs = ["scanpy", "sphinx", "scanpydoc", "nbsphinx", "nbsphinx-link", "ipython", "toml", "pydata-sphinx-theme", "sphinx-autodoc-typehints", "sphinx_gallery", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
