[tool.poetry]
name = "celldisect"
version = "0.1.4"
description = "Cell DISentangled Experts for Covariate counTerfactuals (CellDISECT). Causal generative model designed to disentangle known covariate variations from unknown ones at test time while simultaneously learning to make counterfactual predictions."
authors = ["Arian Amani <aa34@sanger.ac.uk> Stathis Megas <sm58@sanger.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Lotfollahi-lab/CellDISECT"

[tool.poetry.dependencies]
numba = "==0.60.0"
python = ">=3.9"
llvmlite = ">=0.43.0dev0"
anndata = "==0.10.8"
scvi-tools = "==0.20.3"
importlib-metadata = "*"
scanpy = "*"
torch = { version = ">=2.1.0"}
adjustText = "*"
numpy = '>=1.26.3'
seaborn = "*"
gdown = "*"
jax = ">=0.7.1"
jaxlib = ">=0.7.1"
lightning = ">=2.2.0"
scib-metrics = "==0.5.7"
scib = "==1.1.7"
ipykernel = "*"
ray = { version = ">=2.49.1", extras = ["data", "train", "tune", "serve"] }
scipy = "==1.16.2"
typing_extensions = ">=4.5"

[tool.poetry.extras]
docs = ["scanpy", "sphinx", "scanpydoc", "nbsphinx", "nbsphinx-link", "ipython", "toml", "pydata-sphinx-theme", "sphinx-autodoc-typehints", "sphinx_gallery", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
